# DogAndCare

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
apps/api/: urls.py
apps/api/v1/: apps.py  permissions.py  urls.py
apps/api/v1/health/: urls.py
apps/api/v1/pets/: urls.py
apps/api/v1/reminders/: filters.py  urls.py
apps/authentication/: admin.py  apps.py  models.py  tasks.py  urls.py
apps/authentication/migrations/: 0001_initial.py  0002_initial.py
apps/health/: admin.py  apps.py  models.py
apps/health/migrations/: 0001_initial.py  0002_alter_symptom_unique_together.py  0002_initial.py
apps/locations/: admin.py  apps.py  models.py
apps/locations/migrations/: 0001_initial.py
apps/media/: admin.py  apps.py  models.py
apps/media/migrations/: 0001_initial.py
apps/pets/: admin.py  apps.py  models.py
apps/pets/migrations/: 0001_initial.py  0002_alter_pet_temperament.py  0002_initial.py  0003_rename_gender_pet_sex.py  0004_remove_pet_birth_day_remove_pet_birth_month_and_more.py  0005_alter_pet_owner.py
apps/reminders/: admin.py  apps.py  models.py
apps/reminders/migrations/: 0001_initial.py  0002_initial.py  0002_reminder_reminder_type.py  0003_remindercategory_remindertype_and_more.py
apps/users/: admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py  0002_remove_userprofile_is_source_admin.py
apps/walks/: apps.py  models.py
apps/walks/migrations/: 0001_initial.py
config/: adapters.py  asgi.py  celery.py  local_settings.py  prod_settings.py  settings.py  urls.py  wsgi.py
middleware/: jwt.py
nginx/: init-letsencrypt.sh  nginx.conf
nginx/conf.d/: default.conf
utils/: datetime_utils.py  logging_filters.py
(+17 files in other folders)
