[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["NIK <mkisel28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-filter = "^24.2"
gunicorn = "^22.0.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
djangorestframework = "^3.15.2"
black = "^24.4.2"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytz = "^2024.1"
drf-yasg = "1.21.7"
setuptools = "^71.1.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
pillow = "^10.4.0"
dj-rest-auth = "^6.0.0"
django-allauth = "^64.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
